--- a/layout.html
+++ b/layout.html
@@ -61,3 +61,12 @@
 </head>
 
 <body>
+    <div class="container">
+        <header><h1>Header</h1></header>
+        <nav><h2>Nav</h2></nav>
+        <content><h2>Content</h2></content>
+        <aside><h2>Sidebar</h2></aside>
+        <footer><h2>Footer</h2></footer>
+    </div>
+</body>
+</html>
